Fix vox for opening and closing folder

Changes:
Avoid announcing search box focus when opening or closing a folder.

Bug: 921189
Change-Id: Id9b3096534b1b1196d41ce290bbc4617d9ddc2a9
Reviewed-on: https://chromium-review.googlesource.com/c/1457413
Commit-Queue: Weidong Guo <weidongg@chromium.org>
Reviewed-by: Alex Newcomer <newcomer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#630053}
Former-commit-id: 1b3084cf6c92db9d58b9ac4f12d41d5a85384165